Changed thehypepipe.co.uk to www.virtuallyimpossible.co.uk

--- a/content/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/feed/index.html
+++ b/content/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/feed/index.html
@@ -3,15 +3,15 @@
 	xmlns:dc="http://purl.org/dc/elements/1.1/"
 	xmlns:atom="http://www.w3.org/2005/Atom"
 	xmlns:sy="http://purl.org/rss/1.0/modules/syndication/"
-	
+
 xmlns:georss="http://www.georss.org/georss" xmlns:geo="http://www.w3.org/2003/01/geo/wgs84_pos#"
 
 	>
 <channel>
 	<title>
 	Comments on: Changing a UCC/SAN Certificate and Re-Issuing from GoDaddy	</title>
-	<atom:link href="http://thehypepipe.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/feed/" rel="self" type="application/rss+xml" />
-	<link>http://thehypepipe.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/?utm_source=rss&#038;utm_medium=rss&#038;utm_campaign=changing-a-uccsan-certificate-and-re-issuing-from-godaddy</link>
+	<atom:link href="http://www.virtuallyimpossible.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/feed/" rel="self" type="application/rss+xml" />
+	<link>http://www.virtuallyimpossible.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/?utm_source=rss&#038;utm_medium=rss&#038;utm_campaign=changing-a-uccsan-certificate-and-re-issuing-from-godaddy</link>
 	<description>Tips, thoughts and notes from the world of IT</description>
 	<lastBuildDate>Tue, 19 Aug 2014 20:06:14 +0000</lastBuildDate>
 	<sy:updatePeriod>
@@ -22,10 +22,10 @@ xmlns:georss="http://www.georss.org/georss" xmlns:geo="http://www.w3.org/2003/01
 			<item>
 				<title>
 				By: Adam Rush				</title>
-				<link>http://thehypepipe.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/#comment-11801</link>
+				<link>http://www.virtuallyimpossible.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/#comment-11801</link>
 		<dc:creator><![CDATA[Adam Rush]]></dc:creator>
 		<pubDate>Tue, 19 Aug 2014 20:06:14 +0000</pubDate>
-		<guid isPermaLink="false">http://thehypepipe.co.uk/?p=1472#comment-11801</guid>
+		<guid isPermaLink="false">http://www.virtuallyimpossible.co.uk/?p=1472#comment-11801</guid>
 					<description><![CDATA[Tell me about it!! SSL Certs are the bane of my life!!]]></description>
 		<content:encoded><![CDATA[<p>Tell me about it!! SSL Certs are the bane of my life!!</p>
 ]]></content:encoded>
@@ -33,21 +33,21 @@ xmlns:georss="http://www.georss.org/georss" xmlns:geo="http://www.w3.org/2003/01
 						<item>
 				<title>
 				By: Exchange 2010 SSL Cert fun &#124; rustyrake				</title>
-				<link>http://thehypepipe.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/#comment-9302</link>
+				<link>http://www.virtuallyimpossible.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/#comment-9302</link>
 		<dc:creator><![CDATA[Exchange 2010 SSL Cert fun &#124; rustyrake]]></dc:creator>
 		<pubDate>Wed, 30 Jul 2014 04:39:16 +0000</pubDate>
-		<guid isPermaLink="false">http://thehypepipe.co.uk/?p=1472#comment-9302</guid>
-					<description><![CDATA[[&#8230;] http://thehypepipe.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/ [&#8230;]]]></description>
-		<content:encoded><![CDATA[<p>[&#8230;] <a href="http://thehypepipe.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/" rel="nofollow">http://thehypepipe.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/</a> [&#8230;]</p>
+		<guid isPermaLink="false">http://www.virtuallyimpossible.co.uk/?p=1472#comment-9302</guid>
+					<description><![CDATA[[&#8230;] http://www.virtuallyimpossible.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/ [&#8230;]]]></description>
+		<content:encoded><![CDATA[<p>[&#8230;] <a href="http://www.virtuallyimpossible.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/" rel="nofollow">http://www.virtuallyimpossible.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/</a> [&#8230;]</p>
 ]]></content:encoded>
 						</item>
 						<item>
 				<title>
 				By: Kurt				</title>
-				<link>http://thehypepipe.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/#comment-9300</link>
+				<link>http://www.virtuallyimpossible.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/#comment-9300</link>
 		<dc:creator><![CDATA[Kurt]]></dc:creator>
 		<pubDate>Wed, 30 Jul 2014 04:05:28 +0000</pubDate>
-		<guid isPermaLink="false">http://thehypepipe.co.uk/?p=1472#comment-9300</guid>
+		<guid isPermaLink="false">http://www.virtuallyimpossible.co.uk/?p=1472#comment-9300</guid>
 					<description><![CDATA[2 years on and still a handy article, thanks! And thank goodness we only have to play with these things every 3 years or so!]]></description>
 		<content:encoded><![CDATA[<p>2 years on and still a handy article, thanks! And thank goodness we only have to play with these things every 3 years or so!</p>
 ]]></content:encoded>
@@ -55,10 +55,10 @@ xmlns:georss="http://www.georss.org/georss" xmlns:geo="http://www.w3.org/2003/01
 						<item>
 				<title>
 				By: Adam Rush				</title>
-				<link>http://thehypepipe.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/#comment-3704</link>
+				<link>http://www.virtuallyimpossible.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/#comment-3704</link>
 		<dc:creator><![CDATA[Adam Rush]]></dc:creator>
 		<pubDate>Fri, 25 Oct 2013 07:41:50 +0000</pubDate>
-		<guid isPermaLink="false">http://thehypepipe.co.uk/?p=1472#comment-3704</guid>
+		<guid isPermaLink="false">http://www.virtuallyimpossible.co.uk/?p=1472#comment-3704</guid>
 					<description><![CDATA[Great news!]]></description>
 		<content:encoded><![CDATA[<p>Great news!</p>
 ]]></content:encoded>
@@ -66,10 +66,10 @@ xmlns:georss="http://www.georss.org/georss" xmlns:geo="http://www.w3.org/2003/01
 						<item>
 				<title>
 				By: Danny				</title>
-				<link>http://thehypepipe.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/#comment-3696</link>
+				<link>http://www.virtuallyimpossible.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/#comment-3696</link>
 		<dc:creator><![CDATA[Danny]]></dc:creator>
 		<pubDate>Thu, 17 Oct 2013 09:03:12 +0000</pubDate>
-		<guid isPermaLink="false">http://thehypepipe.co.uk/?p=1472#comment-3696</guid>
+		<guid isPermaLink="false">http://www.virtuallyimpossible.co.uk/?p=1472#comment-3696</guid>
 					<description><![CDATA[Awesome post. EXACTLY what I needed. +1 for thanks]]></description>
 		<content:encoded><![CDATA[<p>Awesome post. EXACTLY what I needed. +1 for thanks</p>
 ]]></content:encoded>
@@ -77,10 +77,10 @@ xmlns:georss="http://www.georss.org/georss" xmlns:geo="http://www.w3.org/2003/01
 						<item>
 				<title>
 				By: Steve Baker				</title>
-				<link>http://thehypepipe.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/#comment-3667</link>
+				<link>http://www.virtuallyimpossible.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/#comment-3667</link>
 		<dc:creator><![CDATA[Steve Baker]]></dc:creator>
 		<pubDate>Sun, 26 May 2013 11:40:54 +0000</pubDate>
-		<guid isPermaLink="false">http://thehypepipe.co.uk/?p=1472#comment-3667</guid>
+		<guid isPermaLink="false">http://www.virtuallyimpossible.co.uk/?p=1472#comment-3667</guid>
 					<description><![CDATA[Hey rscrash
 
 I&#039;m very pleased that the steps were useful to you, and thank you for taking the time to feed back your experience!
@@ -97,10 +97,10 @@ Steve]]></description>
 						<item>
 				<title>
 				By: rscrash				</title>
-				<link>http://thehypepipe.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/#comment-3666</link>
+				<link>http://www.virtuallyimpossible.co.uk/changing-a-uccsan-certificate-and-re-issuing-from-godaddy/#comment-3666</link>
 		<dc:creator><![CDATA[rscrash]]></dc:creator>
 		<pubDate>Sat, 25 May 2013 20:21:52 +0000</pubDate>
-		<guid isPermaLink="false">http://thehypepipe.co.uk/?p=1472#comment-3666</guid>
+		<guid isPermaLink="false">http://www.virtuallyimpossible.co.uk/?p=1472#comment-3666</guid>
 					<description><![CDATA[This was the most helpful post I could find on the subject. Met my needs expertly. Thanks for taking the time to document this.]]></description>
 		<content:encoded><![CDATA[<p>This was the most helpful post I could find on the subject. Met my needs expertly. Thanks for taking the time to document this.</p>
 ]]></content:encoded>
