--- a/content/about/feed/index.html
+++ b/content/about/feed/index.html
@@ -3,15 +3,15 @@
 	xmlns:dc="http://purl.org/dc/elements/1.1/"
 	xmlns:atom="http://www.w3.org/2005/Atom"
 	xmlns:sy="http://purl.org/rss/1.0/modules/syndication/"
-	
+
 xmlns:georss="http://www.georss.org/georss" xmlns:geo="http://www.w3.org/2003/01/geo/wgs84_pos#"
 
 	>
 <channel>
 	<title>
 	Comments on: About	</title>
-	<atom:link href="http://thehypepipe.co.uk/about/feed/" rel="self" type="application/rss+xml" />
-	<link>http://thehypepipe.co.uk/</link>
+	<atom:link href="http://www.virtuallyimpossible.co.uk/about/feed/" rel="self" type="application/rss+xml" />
+	<link>http://www.virtuallyimpossible.co.uk/</link>
 	<description>Tips, thoughts and notes from the world of IT</description>
 	<lastBuildDate>Sat, 30 Dec 2017 20:41:58 +0000</lastBuildDate>
 	<sy:updatePeriod>
