--- a/content/cannot-find-pushprinterconnections-exe-to-deploy-printers-via-gpo-to-winxp-pcs/feed/index.html
+++ b/content/cannot-find-pushprinterconnections-exe-to-deploy-printers-via-gpo-to-winxp-pcs/feed/index.html
@@ -3,15 +3,15 @@
 	xmlns:dc="http://purl.org/dc/elements/1.1/"
 	xmlns:atom="http://www.w3.org/2005/Atom"
 	xmlns:sy="http://purl.org/rss/1.0/modules/syndication/"
-	
+
 xmlns:georss="http://www.georss.org/georss" xmlns:geo="http://www.w3.org/2003/01/geo/wgs84_pos#"
 
 	>
 <channel>
 	<title>
 	Comments on: Cannot find pushprinterconnections.exe to deploy printers via GPO to WinXP PCs	</title>
-	<atom:link href="http://thehypepipe.co.uk/cannot-find-pushprinterconnections-exe-to-deploy-printers-via-gpo-to-winxp-pcs/feed/" rel="self" type="application/rss+xml" />
-	<link>http://thehypepipe.co.uk/cannot-find-pushprinterconnections-exe-to-deploy-printers-via-gpo-to-winxp-pcs/?utm_source=rss&#038;utm_medium=rss&#038;utm_campaign=cannot-find-pushprinterconnections-exe-to-deploy-printers-via-gpo-to-winxp-pcs</link>
+	<atom:link href="http://www.virtuallyimpossible.co.uk/cannot-find-pushprinterconnections-exe-to-deploy-printers-via-gpo-to-winxp-pcs/feed/" rel="self" type="application/rss+xml" />
+	<link>http://www.virtuallyimpossible.co.uk/cannot-find-pushprinterconnections-exe-to-deploy-printers-via-gpo-to-winxp-pcs/?utm_source=rss&#038;utm_medium=rss&#038;utm_campaign=cannot-find-pushprinterconnections-exe-to-deploy-printers-via-gpo-to-winxp-pcs</link>
 	<description>Tips, thoughts and notes from the world of IT</description>
 	<lastBuildDate>Thu, 28 Mar 2013 08:46:47 +0000</lastBuildDate>
 	<sy:updatePeriod>
@@ -22,10 +22,10 @@ xmlns:georss="http://www.georss.org/georss" xmlns:geo="http://www.w3.org/2003/01
 			<item>
 				<title>
 				By: Adam Rush				</title>
-				<link>http://thehypepipe.co.uk/cannot-find-pushprinterconnections-exe-to-deploy-printers-via-gpo-to-winxp-pcs/#comment-3614</link>
+				<link>http://www.virtuallyimpossible.co.uk/cannot-find-pushprinterconnections-exe-to-deploy-printers-via-gpo-to-winxp-pcs/#comment-3614</link>
 		<dc:creator><![CDATA[Adam Rush]]></dc:creator>
 		<pubDate>Thu, 28 Mar 2013 08:46:47 +0000</pubDate>
-		<guid isPermaLink="false">http://thehypepipe.co.uk/?p=604#comment-3614</guid>
+		<guid isPermaLink="false">http://www.virtuallyimpossible.co.uk/?p=604#comment-3614</guid>
 					<description><![CDATA[Yeah, I struggled too...glad to be of service! :)]]></description>
 		<content:encoded><![CDATA[<p>Yeah, I struggled too&#8230;glad to be of service! 🙂</p>
 ]]></content:encoded>
@@ -33,11 +33,11 @@ xmlns:georss="http://www.georss.org/georss" xmlns:geo="http://www.w3.org/2003/01
 						<item>
 				<title>
 				By: Joshua Smith				</title>
-				<link>http://thehypepipe.co.uk/cannot-find-pushprinterconnections-exe-to-deploy-printers-via-gpo-to-winxp-pcs/#comment-3613</link>
+				<link>http://www.virtuallyimpossible.co.uk/cannot-find-pushprinterconnections-exe-to-deploy-printers-via-gpo-to-winxp-pcs/#comment-3613</link>
 		<dc:creator><![CDATA[Joshua Smith]]></dc:creator>
 		<pubDate>Thu, 28 Mar 2013 01:24:49 +0000</pubDate>
-		<guid isPermaLink="false">http://thehypepipe.co.uk/?p=604#comment-3613</guid>
-					<description><![CDATA[Thanks for the file. Its been impossible to find. 
+		<guid isPermaLink="false">http://www.virtuallyimpossible.co.uk/?p=604#comment-3613</guid>
+					<description><![CDATA[Thanks for the file. Its been impossible to find.
 Cheers]]></description>
 		<content:encoded><![CDATA[<p>Thanks for the file. Its been impossible to find.<br />
 Cheers</p>
