--- a/content/cannot-see-remoteapp-icons-for-users-only-administrators/feed/index.html
+++ b/content/cannot-see-remoteapp-icons-for-users-only-administrators/feed/index.html
@@ -3,15 +3,15 @@
 	xmlns:dc="http://purl.org/dc/elements/1.1/"
 	xmlns:atom="http://www.w3.org/2005/Atom"
 	xmlns:sy="http://purl.org/rss/1.0/modules/syndication/"
-	
+
 xmlns:georss="http://www.georss.org/georss" xmlns:geo="http://www.w3.org/2003/01/geo/wgs84_pos#"
 
 	>
 <channel>
 	<title>
 	Comments on: Cannot see RemoteApp icons for users &#8211; only administrators	</title>
-	<atom:link href="http://thehypepipe.co.uk/cannot-see-remoteapp-icons-for-users-only-administrators/feed/" rel="self" type="application/rss+xml" />
-	<link>http://thehypepipe.co.uk/cannot-see-remoteapp-icons-for-users-only-administrators/?utm_source=rss&#038;utm_medium=rss&#038;utm_campaign=cannot-see-remoteapp-icons-for-users-only-administrators</link>
+	<atom:link href="http://www.virtuallyimpossible.co.uk/cannot-see-remoteapp-icons-for-users-only-administrators/feed/" rel="self" type="application/rss+xml" />
+	<link>http://www.virtuallyimpossible.co.uk/cannot-see-remoteapp-icons-for-users-only-administrators/?utm_source=rss&#038;utm_medium=rss&#038;utm_campaign=cannot-see-remoteapp-icons-for-users-only-administrators</link>
 	<description>Tips, thoughts and notes from the world of IT</description>
 	<lastBuildDate>Wed, 05 Nov 2014 03:21:37 +0000</lastBuildDate>
 	<sy:updatePeriod>
@@ -22,12 +22,12 @@ xmlns:georss="http://www.georss.org/georss" xmlns:geo="http://www.w3.org/2003/01
 			<item>
 				<title>
 				By: krish				</title>
-				<link>http://thehypepipe.co.uk/cannot-see-remoteapp-icons-for-users-only-administrators/#comment-30080</link>
+				<link>http://www.virtuallyimpossible.co.uk/cannot-see-remoteapp-icons-for-users-only-administrators/#comment-30080</link>
 		<dc:creator><![CDATA[krish]]></dc:creator>
 		<pubDate>Wed, 05 Nov 2014 03:21:37 +0000</pubDate>
-		<guid isPermaLink="false">http://thehypepipe.co.uk/?p=515#comment-30080</guid>
-					<description><![CDATA[THis solution is not possible for Enterprise. 
-Alternate You can change settings on IIS application pool is configured. 
+		<guid isPermaLink="false">http://www.virtuallyimpossible.co.uk/?p=515#comment-30080</guid>
+					<description><![CDATA[THis solution is not possible for Enterprise.
+Alternate You can change settings on IIS application pool is configured.
 IIS&#062;&#062;Application Pool&#062;&#062;RDWebAccess &#124; Advance Settings...
 Identity (Change to Netwrok services or Give any DOmain ID which have access to check User supplied credentials in AD)]]></description>
 		<content:encoded><![CDATA[<p>THis solution is not possible for Enterprise.<br />
@@ -39,10 +39,10 @@ Identity (Change to Netwrok services or Give any DOmain ID which have access to 
 						<item>
 				<title>
 				By: Adam Rush				</title>
-				<link>http://thehypepipe.co.uk/cannot-see-remoteapp-icons-for-users-only-administrators/#comment-3691</link>
+				<link>http://www.virtuallyimpossible.co.uk/cannot-see-remoteapp-icons-for-users-only-administrators/#comment-3691</link>
 		<dc:creator><![CDATA[Adam Rush]]></dc:creator>
 		<pubDate>Fri, 13 Sep 2013 20:10:31 +0000</pubDate>
-		<guid isPermaLink="false">http://thehypepipe.co.uk/?p=515#comment-3691</guid>
+		<guid isPermaLink="false">http://www.virtuallyimpossible.co.uk/?p=515#comment-3691</guid>
 					<description><![CDATA[Good dice!]]></description>
 		<content:encoded><![CDATA[<p>Good dice!</p>
 ]]></content:encoded>
@@ -50,10 +50,10 @@ Identity (Change to Netwrok services or Give any DOmain ID which have access to 
 						<item>
 				<title>
 				By: Lars				</title>
-				<link>http://thehypepipe.co.uk/cannot-see-remoteapp-icons-for-users-only-administrators/#comment-3684</link>
+				<link>http://www.virtuallyimpossible.co.uk/cannot-see-remoteapp-icons-for-users-only-administrators/#comment-3684</link>
 		<dc:creator><![CDATA[Lars]]></dc:creator>
 		<pubDate>Wed, 21 Aug 2013 20:02:01 +0000</pubDate>
-		<guid isPermaLink="false">http://thehypepipe.co.uk/?p=515#comment-3684</guid>
+		<guid isPermaLink="false">http://www.virtuallyimpossible.co.uk/?p=515#comment-3684</guid>
 					<description><![CDATA[did the trick for me too, thank you!!]]></description>
 		<content:encoded><![CDATA[<p>did the trick for me too, thank you!!</p>
 ]]></content:encoded>
